# evrone-qna-agent

./: .env.example  .env.loadtest.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  .squawk.toml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-validation.yml  deploy.yml  pr-checks.yml
alembic/: env.py
alembic/versions/: 2024_12_15_initial_schema.py  e67a105d2cdb_add_message_updated_at.py
knowledge/: council_of_architects.md  multiverse_overview.md  multiverse_threats.md  notable_universes.md  sample_doc.txt
loadtests/: __init__.py  config.py  docker-compose.loadtest.yml  locustfile.py  mock_llm_server.py
loadtests/scenarios/: __init__.py  smoke.py
loadtests/users/: __init__.py  base.py  chat_user.py  health_user.py  message_user.py
scripts/: deploy-app.sh  setup.sh  teardown.sh
src/qna_agent/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py
src/qna_agent/agent/: __init__.py  client.py  config.py  dependencies.py  exceptions.py  service.py  tools.py
src/qna_agent/chats/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/qna_agent/events/: __init__.py  manager.py  router.py  schemas.py
src/qna_agent/health/: __init__.py  router.py  schemas.py
src/qna_agent/knowledge/: __init__.py  config.py  dependencies.py  exceptions.py  service.py
src/qna_agent/messages/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/hetzner/: main.tf  network.tf  server.tf
terraform/modules/kubernetes/: backup.tf  configmap.tf  deployment.tf  hpa.tf  ingress.tf  main.tf  networkpolicy.tf  pdb.tf  pgbouncer.tf  postgresql.tf  pvc.tf  resourcequota.tf  secret.tf  service.tf  serviceaccount.tf
tests/: __init__.py  conftest.py  test_exception_handlers.py
tests/agent/: test_integration.py  test_service.py
tests/chats/: __init__.py  test_router.py  test_service.py
tests/events/: __init__.py  test_router.py
tests/health/: __init__.py  test_router.py
tests/knowledge/: __init__.py  test_service.py
tests/messages/: __init__.py  test_router.py  test_service.py
tests/migrations/: test_migrations.py
