[project]
name = "qna-agent"
version = "0.1.0"
description = "QnA Agent API - Chat-based question answering with OpenAI function calling"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Evrone", email = "info@evrone.com" }]
keywords = ["fastapi", "openai", "llm", "chatbot", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "asyncpg",
    "alembic",
    "litellm",
    "langfuse",
    "pydantic",
    "pydantic-settings",
    "sse-starlette",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "anyio",
    "httpx",
    "ruff",
    "basedpyright",
    "bandit",
    "wemake-python-styleguide",
    "coverage",
    "pre-commit",
    "squawk-cli>=1.6.0",
]
loadtest = [
    "locust>=2.32.0",
    "gevent>=24.11.1",
]

[project.urls]
Homepage = "https://github.com/evrone/evrone-qna-agent"
Repository = "https://github.com/evrone/evrone-qna-agent"
Documentation = "https://github.com/evrone/evrone-qna-agent#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qna_agent"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "RUF",    # ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["qna_agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["alembic", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/qna_agent"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
